# voxell_rng

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: branch_rng.rs  genrandom.rs  getrandom.rs  lib.rs  prelude.rs  rng.rs  rng_core_extension.rs  runtime_seeded.rs  slice_methods.rs  time_seeded.rs  time_seeded_rng.rs
src/rng/: mod.rs  pcg_128.rs  pcg_16.rs  pcg_32.rs  pcg_64.rs  pcg_8.rs  polyfill.rs  splitmix64.rs  xoroshiro128.rs  xoroshiro128plus.rs  xorshift128.rs  xorshift32.rs
src/rng/pcgv2/: mod.rs
src/slice_methods/: mod.rs  select_random.rs  shuffle.rs
