[package]
categories = ["algorithms"]
description = "Cheap and dirty thread-local RNGs"
documentation = "https://docs.rs/voxell_rng"
edition = "2021"
keywords = ["cheap", "dirty", "non-deterministic", "random", "rng"]
license = "MIT"
name = "voxell_rng"
readme = "README.md"
repository = "https://github.com/paladynee/voxell_rng"
version = "0.1.0"

[dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
